--- a/Code/Data Loading/Test Earnings Call Data Load.ipynb
+++ b/Code/Data Loading/Test Earnings Call Data Load.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -116,7 +116,7 @@
        "[96 rows x 1 columns]"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -125,7 +125,7 @@
     "# Load ~\\Box\\STAT 222 Capstone\\Raw Data\\Big Earnings Call Dataset\\sectors\\automobiles\\ADNT\\ADNT20172.csv\n",
     "ADNT20172 = pd.read_csv('~/Box/STAT 222 Capstone/Raw Data/Big Earnings Call Dataset/sectors/automobiles/ADNT/ADNT20172.csv')\n",
     "\n",
-    "ADNT20172"
+    "# ADNT20172"
    ]
   },
   {
@@ -352,7 +352,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.1"
+   "version": "3.12.2"
   }
  },
  "nbformat": 4,
