--- a/Code/Exploratory Data Analysis/Credit Ratings EDA.ipynb
+++ b/Code/Exploratory Data Analysis/Credit Ratings EDA.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
@@ -444,7 +444,7 @@
        "[2029 rows x 31 columns]"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 60,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -458,7 +458,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
@@ -486,7 +486,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
@@ -805,7 +805,7 @@
        "[8 rows x 25 columns]"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 62,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -817,7 +817,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -828,7 +828,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
@@ -873,7 +873,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
@@ -899,7 +899,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
@@ -930,7 +930,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
@@ -939,7 +939,7 @@
        "<Axes: xlabel='Year'>"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 67,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -961,7 +961,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
     {
@@ -970,7 +970,7 @@
        "<Axes: title={'center': 'Number of Changes to Each Rating'}, xlabel='Rating'>"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 68,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -992,7 +992,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [
     {
@@ -1039,7 +1039,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [
     {
@@ -1056,7 +1056,7 @@
        "<Axes: xlabel='Sector'>"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 70,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1078,7 +1078,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [
     {
@@ -1120,7 +1120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [
     {
@@ -1129,7 +1129,7 @@
        "593"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 72,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1137,6 +1137,27 @@
    "source": [
     "# Count of unique firms/values of Name\n",
     "corporate_rating['Name'].nunique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "593"
+      ]
+     },
+     "execution_count": 73,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# By Symbol\n",
+    "corporate_rating['Symbol'].nunique()"
    ]
   },
   {
@@ -1148,7 +1169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [
     {
@@ -1560,7 +1581,7 @@
        "[743 rows x 32 columns]"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 74,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1575,7 +1596,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [
     {
@@ -1584,7 +1605,7 @@
        "298"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 75,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1596,7 +1617,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 76,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "298"
+      ]
+     },
+     "execution_count": 76,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# By Symbol\n",
+    "s_and_p_2010_2016_data['Symbol'].nunique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
    "metadata": {},
    "outputs": [
     {
@@ -1622,7 +1664,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [
     {
@@ -1631,7 +1673,7 @@
        "<Axes: title={'center': 'Number of Rating Changes by Sector - S&P 2010-2016'}, ylabel='Sector'>"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 78,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1657,7 +1699,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [
     {
@@ -1666,7 +1708,7 @@
        "<Axes: title={'center': 'Number of Firms by Sector - S&P 2010-2016'}, ylabel='Sector'>"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 79,
      "metadata": {},
      "output_type": "execute_result"
     },
