dataframe ready for merging

--- a/Code/Earning Calls/calls2sec.ipynb
+++ b/Code/Earning Calls/calls2sec.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -264,10 +264,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "dict_keys(['automobiles', 'banks', 'capital-goods', 'commercial-services', 'consumer-durables', 'consumer-retailing', 'consumer-services', 'diversified-financials', 'energy', 'food-beverage-tobacco', 'healthcare', 'household', 'insurance', 'materials', 'media', 'pharmaceuticals-biotech', 'real-estate', 'retail'])"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "calls_missing.keys()"
+   ]
   }
  ],
  "metadata": {
