pre-code on ratings on earnings call dates

--- a/Code/Data Loading/Combine Credit Rating Data.ipynb
+++ b/Code/Data Loading/Combine Credit Rating Data.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 261,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 262,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -33,7 +33,7 @@
      "text": [
       "<>:3: SyntaxWarning: invalid escape sequence '\\B'\n",
       "<>:3: SyntaxWarning: invalid escape sequence '\\B'\n",
-      "C:\\Users\\ijyli\\AppData\\Local\\Temp\\ipykernel_2944\\1870754754.py:3: SyntaxWarning: invalid escape sequence '\\B'\n",
+      "C:\\Users\\ijyli\\AppData\\Local\\Temp\\ipykernel_15704\\1870754754.py:3: SyntaxWarning: invalid escape sequence '\\B'\n",
       "  corporate_rating = pd.read_csv('~\\Box\\STAT 222 Capstone\\Raw Data\\Credit Rating Data From Kaggle\\corporate_rating.csv')\n"
      ]
     },
@@ -446,7 +446,7 @@
        "[2029 rows x 31 columns]"
       ]
      },
-     "execution_count": 262,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -460,7 +460,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 263,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -469,7 +469,7 @@
      "text": [
       "<>:3: SyntaxWarning: invalid escape sequence '\\B'\n",
       "<>:3: SyntaxWarning: invalid escape sequence '\\B'\n",
-      "C:\\Users\\ijyli\\AppData\\Local\\Temp\\ipykernel_2944\\1998800122.py:3: SyntaxWarning: invalid escape sequence '\\B'\n",
+      "C:\\Users\\ijyli\\AppData\\Local\\Temp\\ipykernel_15704\\1998800122.py:3: SyntaxWarning: invalid escape sequence '\\B'\n",
       "  supplementary_data = pd.read_csv('~\\Box\\STAT 222 Capstone\\Raw Data\\Supplementary Credit Rating Data From Kaggle\\corporateCreditRatingWithFinancialRatios.csv')\n"
      ]
     },
@@ -882,7 +882,7 @@
        "[7805 rows x 25 columns]"
       ]
      },
-     "execution_count": 263,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -896,7 +896,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 264,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -934,32 +934,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 265,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\ijyli\\AppData\\Local\\Temp\\ipykernel_2944\\3334983285.py:4: SettingWithCopyWarning: \n",
+      "C:\\Users\\ijyli\\AppData\\Local\\Temp\\ipykernel_15704\\3334983285.py:4: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  corporate_rating['Source'] = 'Original'\n",
-      "C:\\Users\\ijyli\\AppData\\Local\\Temp\\ipykernel_2944\\3334983285.py:6: SettingWithCopyWarning: \n",
+      "C:\\Users\\ijyli\\AppData\\Local\\Temp\\ipykernel_15704\\3334983285.py:6: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  corporate_rating['Date'] = pd.to_datetime(corporate_rating['Date'])\n",
-      "C:\\Users\\ijyli\\AppData\\Local\\Temp\\ipykernel_2944\\3334983285.py:10: SettingWithCopyWarning: \n",
+      "C:\\Users\\ijyli\\AppData\\Local\\Temp\\ipykernel_15704\\3334983285.py:10: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  supplementary_data['Rating Date'] = pd.to_datetime(supplementary_data['Rating Date'])\n",
-      "C:\\Users\\ijyli\\AppData\\Local\\Temp\\ipykernel_2944\\3334983285.py:12: SettingWithCopyWarning: \n",
+      "C:\\Users\\ijyli\\AppData\\Local\\Temp\\ipykernel_15704\\3334983285.py:12: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -1156,7 +1156,7 @@
        "[9834 rows x 7 columns]"
       ]
      },
-     "execution_count": 265,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1183,7 +1183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 266,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -1199,7 +1199,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 266,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1211,7 +1211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 267,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1221,7 +1221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 268,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -1279,7 +1279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 269,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -1305,7 +1305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 270,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -1350,7 +1350,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 271,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -1368,7 +1368,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 272,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1378,7 +1378,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 273,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -1402,7 +1402,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 274,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -1433,7 +1433,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 275,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -1504,7 +1504,7 @@
        "max              2016-12-27 00:00:00"
       ]
      },
-     "execution_count": 275,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1516,7 +1516,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 276,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -1586,7 +1586,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 277,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -1785,7 +1785,7 @@
        "D                       6   0   0    0     0     0     0     0    0   0"
       ]
      },
-     "execution_count": 277,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1806,7 +1806,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 278,
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Variable for next rating, previous rating, and associated dates\n",
+    "\n",
+    "# Sort appropriately\n",
+    "combined_data = combined_data.sort_values(by=['Rating Agency Name', 'Symbol', 'Date'])\n",
+    "\n",
+    "# Next rating is next item if same Symbol and Rating Agency Name\n",
+    "combined_data['Next Rating'] = combined_data['Rating'].shift(-1)\n",
+    "# Set to NaN if next Symbol or Rating Agency Name are different\n",
+    "combined_data.loc[combined_data['Symbol'].shift(-1) != combined_data['Symbol'], 'Next Rating'] = None\n",
+    "combined_data.loc[combined_data['Rating Agency Name'].shift(-1) != combined_data['Rating Agency Name'], 'Next Rating'] = None\n",
+    "\n",
+    "# Next rating date is next item if same Symbol and Rating Agency Name\n",
+    "combined_data['Next Rating Date'] = combined_data['Date'].shift(-1)\n",
+    "# Set to NaN if next Symbol or Rating Agency Name are different\n",
+    "combined_data.loc[combined_data['Symbol'].shift(-1) != combined_data['Symbol'], 'Next Rating Date'] = None\n",
+    "combined_data.loc[combined_data['Rating Agency Name'].shift(-1) != combined_data['Rating Agency Name'], 'Next Rating Date'] = None\n",
+    "\n",
+    "# Previous rating is previous item if same Symbol and Rating Agency Name\n",
+    "combined_data['Previous Rating'] = combined_data['Rating'].shift(1)\n",
+    "# Set to NaN if previous Symbol or Rating Agency Name are different\n",
+    "combined_data.loc[combined_data['Symbol'].shift(1) != combined_data['Symbol'], 'Previous Rating'] = None\n",
+    "combined_data.loc[combined_data['Rating Agency Name'].shift(1) != combined_data['Rating Agency Name'], 'Previous Rating'] = None\n",
+    "\n",
+    "# Previous rating date is previous item if same Symbol and Rating Agency Name\n",
+    "combined_data['Previous Rating Date'] = combined_data['Date'].shift(1)\n",
+    "# Set to NaN if previous Symbol or Rating Agency Name are different\n",
+    "combined_data.loc[combined_data['Symbol'].shift(1) != combined_data['Symbol'], 'Previous Rating Date'] = None\n",
+    "combined_data.loc[combined_data['Rating Agency Name'].shift(1) != combined_data['Rating Agency Name'], 'Previous Rating Date'] = None"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Variable that is Next Rating Date or End of Data - 12/31/2016 if missing\n",
+    "combined_data['Next Rating Date or End of Data'] = combined_data['Next Rating Date']\n",
+    "# Set to 12/31/2016 if missing\n",
+    "combined_data.loc[combined_data['Next Rating Date'].isnull(), 'Next Rating Date or End of Data'] = pd.to_datetime('12/31/2016')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -1838,20 +1886,33 @@
       "76        A    ADM  Egan-Jones Ratings Company 2013-12-31  Supplementary   \n",
       "77        A    ADM  Egan-Jones Ratings Company 2014-02-14  Supplementary   \n",
       "\n",
-      "      Rating Rank AAA is 10         Type  \n",
-      "5932                      7    Ambiguous  \n",
-      "5947                      7    Ambiguous  \n",
-      "5948                      7  Affirmation  \n",
-      "460                       8    Ambiguous  \n",
-      "543                       8    Ambiguous  \n",
-      "...                     ...          ...  \n",
-      "67                        8  Affirmation  \n",
-      "68                        8  Affirmation  \n",
-      "5676                      7    Ambiguous  \n",
-      "76                        8      Upgrade  \n",
-      "77                        8  Affirmation  \n",
+      "      Rating Rank AAA is 10 Next Rating Next Rating Date Previous Rating  \\\n",
+      "5932                      7        None              NaT            None   \n",
+      "5947                      7         BBB       2015-11-25            None   \n",
+      "5948                      7        None              NaT             BBB   \n",
+      "460                       8        None              NaT            None   \n",
+      "543                       8        None              NaT            None   \n",
+      "...                     ...         ...              ...             ...   \n",
+      "67                        8           A       2015-10-14               A   \n",
+      "68                        8        None              NaT               A   \n",
+      "5676                      7           A       2013-12-31            None   \n",
+      "76                        8           A       2014-02-14             BBB   \n",
+      "77                        8           A       2014-05-27               A   \n",
       "\n",
-      "[100 rows x 7 columns]\n"
+      "     Previous Rating Date Next Rating Date or End of Data         Type  \n",
+      "5932                  NaT                      2016-12-31    Ambiguous  \n",
+      "5947                  NaT                      2015-11-25    Ambiguous  \n",
+      "5948           2015-11-09                      2016-12-31  Affirmation  \n",
+      "460                   NaT                      2016-12-31    Ambiguous  \n",
+      "543                   NaT                      2016-12-31    Ambiguous  \n",
+      "...                   ...                             ...          ...  \n",
+      "67             2015-06-16                      2015-10-14  Affirmation  \n",
+      "68             2015-09-25                      2016-12-31  Affirmation  \n",
+      "5676                  NaT                      2013-12-31    Ambiguous  \n",
+      "76             2013-08-07                      2014-02-14      Upgrade  \n",
+      "77             2013-12-31                      2014-05-27  Affirmation  \n",
+      "\n",
+      "[100 rows x 12 columns]\n"
      ]
     }
    ],
@@ -1896,7 +1957,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 279,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -1949,7 +2010,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 280,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1959,7 +2020,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 281,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -1968,7 +2029,7 @@
      "text": [
       "<>:2: SyntaxWarning: invalid escape sequence '\\B'\n",
       "<>:2: SyntaxWarning: invalid escape sequence '\\B'\n",
-      "C:\\Users\\ijyli\\AppData\\Local\\Temp\\ipykernel_2944\\2715337762.py:2: SyntaxWarning: invalid escape sequence '\\B'\n",
+      "C:\\Users\\ijyli\\AppData\\Local\\Temp\\ipykernel_15704\\2715337762.py:2: SyntaxWarning: invalid escape sequence '\\B'\n",
       "  combined_data.to_csv('~\\Box\\STAT 222 Capstone\\Intermediate Data\\combined_credit_rating_data.csv', index = False)\n"
      ]
     }
