year and tabular financial data issues

--- a/Code/Data Loading and Cleaning/Create Combined All Data.ipynb
+++ b/Code/Data Loading and Cleaning/Create Combined All Data.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -417,7 +417,7 @@
        "[4559 rows x 20 columns]"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -430,7 +430,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -597,7 +597,7 @@
        "[62074 rows x 6 columns]"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -617,13 +617,60 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 28,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "date range\n",
+      "2010-07-31\n",
+      "2016-12-22\n",
+      "year\n",
+      "2010\n",
+      "2019\n",
+      "Year\n",
+      "2010\n",
+      "2016\n",
+      "years greater than 2016\n",
+      "     earnings_call_date ticker company        date  year  Year\n",
+      "33           2016-11-02    ABC     ABC  2016-11-02  2017  2016\n",
+      "122          2016-11-08    ALB     ALB  2016-11-08  2017  2014\n",
+      "136          2016-11-02   ALKS    ALKS  2016-11-02  2017  2016\n",
+      "144          2016-08-25   AMCR    AMCR  2016-08-25  2019  2016\n",
+      "227          2016-10-27    APD     APD  2016-10-27  2017  2011\n",
+      "...                 ...    ...     ...         ...   ...   ...\n",
+      "4465         2016-09-28    WOR     WOR  2016-09-28  2017  2014\n",
+      "4466         2016-12-20    WOR     WOR  2016-12-20  2017  2014\n",
+      "4472         2016-11-07    WRK     WRK  2016-11-07  2017  2015\n",
+      "4478         2016-10-18    WWW     WWW  2016-10-18  2017  2016\n",
+      "4558         2016-11-02    ZTS     ZTS  2016-11-02  2017  2016\n",
+      "\n",
+      "[156 rows x 6 columns]\n"
+     ]
+    }
+   ],
    "source": [
     "# Inner join credit_ratings_on_earnings_call_dates.csv (on columns ticker, earnings_call_date) with calls.csv (on columns company, date)\n",
     "merged = pd.merge(credit_ratings_on_earnings_call_dates, calls, left_on=['ticker', 'earnings_call_date'], right_on=['company', 'date'], how='inner')\n",
     "merged\n",
+    "\n",
+    "# Print range of dates\n",
+    "print('date range')\n",
+    "print(merged['date'].min())\n",
+    "print(merged['date'].max())\n",
+    "\n",
+    "# Range of year, Year\n",
+    "for variable in ['year', 'Year']:\n",
+    "    print(variable)\n",
+    "    print(merged[variable].min())\n",
+    "    print(merged[variable].max())\n",
+    "\n",
+    "# Print rows where year is greater than 2016\n",
+    "# This is due to inconsistencies in the earnings call data year variable\n",
+    "print('years greater than 2016')\n",
+    "print(merged[merged['year'] > 2016][['earnings_call_date', 'ticker', 'company', 'date', 'year', 'Year']])\n",
     "\n",
     "# Free up memory from calls\n",
     "del calls"
@@ -631,7 +678,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1068,7 +1115,7 @@
        "[4532 rows x 158 columns]"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1102,7 +1149,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "date range\n",
+      "2010-07-31\n",
+      "2016-12-22\n",
+      "year\n",
+      "2010\n",
+      "2019\n",
+      "Year\n",
+      "2010\n",
+      "2016\n",
+      "calendarYear\n",
+      "2010\n",
+      "2019\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Print range of dates\n",
+    "print('date range')\n",
+    "print(merged['date'].min())\n",
+    "print(merged['date'].max())\n",
+    "\n",
+    "# Range of year, Year, calendarYear\n",
+    "for variable in ['year', 'Year', 'calendarYear']:\n",
+    "    print(variable)\n",
+    "    print(merged[variable].min())\n",
+    "    print(merged[variable].max())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1137,7 +1221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1147,7 +1231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1157,7 +1241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
