--- a/Code/Data Loading and Cleaning/Credit Ratings on Earnings Call Dates.ipynb
+++ b/Code/Data Loading and Cleaning/Credit Ratings on Earnings Call Dates.ipynb
@@ -830,6 +830,27 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "    earnings_call_date  Year\n",
+      "min         2010-07-31  2010\n",
+      "max         2016-12-22  2016\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Date checks\n",
+    "# Min and max of earnings_call_date and Year\n",
+    "print(credit_ratings_on_earnings_call_dates[['earnings_call_date', 'Year']].agg(['min', 'max']))"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -838,7 +859,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
