--- a/Code/Exploratory Data Analysis/All Data EDA.ipynb
+++ b/Code/Exploratory Data Analysis/All Data EDA.ipynb
@@ -16,6 +16,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Setup - Sample Path and Packages"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 243,
    "metadata": {},
@@ -38,6 +45,13 @@
     "# Packages\n",
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Code"
    ]
   },
   {
@@ -2065,8 +2079,8 @@
     }
    ],
    "source": [
-    "# Load in parquet file\n",
-    "# ~\\Box\\STAT 222 Capstone\\Intermediate Data\\all_data.parquet\n",
+    "# Load in sample csv, or full parquet file\n",
+    "# Use inputted sample path, or ~\\Box\\STAT 222 Capstone\\Intermediate Data\\all_data.parquet\n",
     "if sample:\n",
     "    df = pd.read_csv(sample_path)\n",
     "else:\n",
