--- a/Code/Exploratory Data Analysis/All Data EDA.ipynb
+++ b/Code/Exploratory Data Analysis/All Data EDA.ipynb
@@ -3859,7 +3859,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We can see from word cloud for credit rating AA, postive words like \"growth\" when compared to credit rating CCC."
+    "We can see from word cloud for credit rating AA, postive words like \"growth\" are larger when compared to credit rating CCC."
    ]
   }
  ],
