--- a/Code/Data Loading and Cleaning/Create Combined All Data.ipynb
+++ b/Code/Data Loading and Cleaning/Create Combined All Data.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -417,7 +417,7 @@
        "[4559 rows x 20 columns]"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -430,7 +430,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -597,7 +597,7 @@
        "[62074 rows x 6 columns]"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -617,7 +617,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -678,7 +678,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -1115,7 +1115,7 @@
        "[4532 rows x 158 columns]"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1149,7 +1149,112 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Rating Rank AAA is 10  2   3    4    5     6     7    8    9   10\n",
+      "Rating                                                           \n",
+      "A                       0   0    0    0     0     0  939    0   0\n",
+      "AA                      0   0    0    0     0     0    0  222   0\n",
+      "AAA                     0   0    0    0     0     0    0    0  82\n",
+      "B                       0   0    0  529     0     0    0    0   0\n",
+      "BB                      0   0    0    0  1131     0    0    0   0\n",
+      "BBB                     0   0    0    0     0  1453    0    0   0\n",
+      "C                      16   0    0    0     0     0    0    0   0\n",
+      "CC                      0   4    0    0     0     0    0    0   0\n",
+      "CCC                     0   0  156    0     0     0    0    0   0\n",
+      "Rating on Next Earnings Call Date Rank AAA is 10  2.0   3.0   4.0   5.0   \\\n",
+      "rating_on_next_earnings_call_date                                          \n",
+      "A                                                    0     0     0     0   \n",
+      "AA                                                   0     0     0     0   \n",
+      "AAA                                                  0     0     0     0   \n",
+      "B                                                    0     0     0   475   \n",
+      "BB                                                   0     0     0     0   \n",
+      "BBB                                                  0     0     0     0   \n",
+      "C                                                   15     0     0     0   \n",
+      "CC                                                   0     4     0     0   \n",
+      "CCC                                                  0     0   145     0   \n",
+      "\n",
+      "Rating on Next Earnings Call Date Rank AAA is 10  6.0   7.0   8.0   9.0   10.0  \n",
+      "rating_on_next_earnings_call_date                                               \n",
+      "A                                                    0     0   894     0     0  \n",
+      "AA                                                   0     0     0   205     0  \n",
+      "AAA                                                  0     0     0     0    78  \n",
+      "B                                                    0     0     0     0     0  \n",
+      "BB                                                1043     0     0     0     0  \n",
+      "BBB                                                  0  1354     0     0     0  \n",
+      "C                                                    0     0     0     0     0  \n",
+      "CC                                                   0     0     0     0     0  \n",
+      "CCC                                                  0     0     0     0     0  \n"
+     ]
+    }
+   ],
+   "source": [
+    "# Rating change variables\n",
+    "# Get numeric values for Rating and rating_on_next_earnings_call_date\n",
+    "# Encode Ratings as ordinal\n",
+    "rating_order = ['AAA', 'AA', 'A', 'BBB', 'BB', 'B', 'CCC', 'CC', 'C', 'D']\n",
+    "# Reverse\n",
+    "rating_order = rating_order[::-1]\n",
+    "# Create dictionary mapping to number values\n",
+    "rating_dict = {rating: i for i, rating in enumerate(rating_order, 1)}\n",
+    "# Create new column \"Rating Rank AAA is 10\"\n",
+    "merged['Rating Rank AAA is 10'] = merged['Rating'].map(rating_dict)\n",
+    "# Create new column \"Rating on Next Earnings Call Date Rank AAA is 10\"\n",
+    "merged['Rating on Next Earnings Call Date Rank AAA is 10'] = merged['rating_on_next_earnings_call_date'].map(rating_dict)\n",
+    "\n",
+    "# Cross tab Rating and 'Rating Rank AAA is 10'\n",
+    "print(pd.crosstab(merged['Rating'], merged['Rating Rank AAA is 10']))\n",
+    "# Cross tab rating_on_next_earnings_call_date and 'Rating on Next Earnings Call Date Rank AAA is 10'\n",
+    "print(pd.crosstab(merged['rating_on_next_earnings_call_date'], merged['Rating on Next Earnings Call Date Rank AAA is 10']))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Change Before Next Call            -2.0  -1.0   0.0   1.0   2.0\n",
+      "Change Direction Before Next Call                              \n",
+      "Downgrade Before Next Call            9    93     0     0     0\n",
+      "Same At Next Call                     0     0  3981     0     0\n",
+      "Upgrade Before Next Call              0     0     0   117    13\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Variable for change before next call\n",
+    "def change(row):\n",
+    "    if row['Rating Rank AAA is 10'] > row['Rating on Next Earnings Call Date Rank AAA is 10']:\n",
+    "        return 'Downgrade Before Next Call'\n",
+    "    elif row['Rating Rank AAA is 10'] < row['Rating on Next Earnings Call Date Rank AAA is 10']:\n",
+    "        return 'Upgrade Before Next Call'\n",
+    "    elif row['Rating Rank AAA is 10'] == row['Rating on Next Earnings Call Date Rank AAA is 10']:\n",
+    "        return 'Same At Next Call'\n",
+    "    else:\n",
+    "        return None\n",
+    "\n",
+    "# Apply function to create new column\n",
+    "merged['Change Direction Before Next Call'] = merged.apply(change, axis = 1)\n",
+    "\n",
+    "# Also numeric version 'Change Before Next Call'\n",
+    "merged['Change Before Next Call'] = merged['Rating on Next Earnings Call Date Rank AAA is 10'] - merged['Rating Rank AAA is 10']\n",
+    "\n",
+    "# Cross tab 'Change Direction Before Next Call' and 'Change Before Next Call'\n",
+    "print(pd.crosstab(merged['Change Direction Before Next Call'], merged['Change Before Next Call']))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -1186,7 +1291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -1195,20 +1300,21 @@
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
       "RangeIndex: 4532 entries, 0 to 4531\n",
-      "Columns: 158 entries, ticker to finalLink_income_statement\n",
-      "dtypes: float64(104), int32(3), int64(10), object(41)\n",
-      "memory usage: 5.4+ MB\n",
+      "Columns: 161 entries, ticker to Change Before Next Call\n",
+      "dtypes: float64(106), int32(3), int64(10), object(42)\n",
+      "memory usage: 5.5+ MB\n",
       "None\n",
       "Index(['ticker', 'earnings_call_date', 'next_earnings_call_date',\n",
       "       'rating_on_next_earnings_call_date', 'days_until_next_earnings_call',\n",
       "       'Rating', 'Rating Agency Name', 'rating_date', 'Source',\n",
       "       'Rating Rank AAA is 10',\n",
       "       ...\n",
-      "       'incomeBeforeTaxRatio', 'incomeTaxExpense',\n",
-      "       'netIncome_income_statement', 'netIncomeRatio', 'eps', 'epsdiluted',\n",
-      "       'weightedAverageShsOut', 'weightedAverageShsOutDil',\n",
-      "       'link_income_statement', 'finalLink_income_statement'],\n",
-      "      dtype='object', length=158)\n"
+      "       'netIncomeRatio', 'eps', 'epsdiluted', 'weightedAverageShsOut',\n",
+      "       'weightedAverageShsOutDil', 'link_income_statement',\n",
+      "       'finalLink_income_statement',\n",
+      "       'Rating on Next Earnings Call Date Rank AAA is 10',\n",
+      "       'Change Direction Before Next Call', 'Change Before Next Call'],\n",
+      "      dtype='object', length=161)\n"
      ]
     }
    ],
@@ -1221,7 +1327,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
