--- a/Code/Exploratory Data Analysis/All Data EDA.ipynb
+++ b/Code/Exploratory Data Analysis/All Data EDA.ipynb
@@ -4082,6 +4082,8 @@
    ],
    "source": [
     "import spacy\n",
+    "from tqdm.auto import tqdm # progress tracking\n",
+    "tqdm.pandas()\n",
     "\n",
     "# load model and disable unnecessary components\n",
     "nlp = spacy.load('en_core_web_sm', disable=['tagger', 'parser', 'lemmatizer', 'attribute_ruler', 'morphologizer', 'textcat'])\n",
@@ -4100,7 +4102,7 @@
     "    return count\n",
     "\n",
     "# Apply the function to the transcript column\n",
-    "df['company_mentions'] = df['transcript'].apply(count_companies)\n",
+    "df['company_mentions'] = df['transcript'].progress_apply(count_companies)\n",
     "\n",
     "# Plot the distribution of company mentions\n",
     "plt.figure(figsize=(8, 5))\n",
