--- a/Code/Exploratory Data Analysis/All Data EDA.ipynb
+++ b/Code/Exploratory Data Analysis/All Data EDA.ipynb
@@ -4102,6 +4102,7 @@
     "    return count\n",
     "\n",
     "# Apply the function to the transcript column\n",
+    "# potentially look into ways to do this in parallel or make more efficient...\n",
     "df['company_mentions'] = df['transcript'].progress_apply(count_companies)\n",
     "\n",
     "# Plot the distribution of company mentions\n",
