Add some structures to read me

--- a/Code/Earning Calls/calls2sec.ipynb
+++ b/Code/Earning Calls/calls2sec.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -118,7 +118,7 @@
        "2017  2017-04-28 17:00:00  Operator: Welcome, and thank you all for stand..."
       ]
      },
-     "execution_count": 3,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -132,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -151,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -201,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -241,7 +241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -297,7 +297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -322,7 +322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -427,7 +427,7 @@
        "4  Operator: Good Day and welcome to the Q2 2012 ...  "
       ]
      },
-     "execution_count": 24,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -448,7 +448,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# df_calls.to_csv(\"calls_short.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -479,28 +488,28 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>ADNT</td>\n",
-       "      <td>2017-04-28</td>\n",
+       "      <td>ALV</td>\n",
+       "      <td>2009-07-21</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>ADNT</td>\n",
-       "      <td>2017-07-27</td>\n",
+       "      <td>ALV</td>\n",
+       "      <td>2011-07-21</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>ADNT</td>\n",
-       "      <td>2017-11-05</td>\n",
+       "      <td>ALV</td>\n",
+       "      <td>2011-10-25</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>ADNT</td>\n",
-       "      <td>2018-01-29</td>\n",
+       "      <td>ALV</td>\n",
+       "      <td>2012-02-01</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>ADNT</td>\n",
-       "      <td>2018-05-03</td>\n",
+       "      <td>ALV</td>\n",
+       "      <td>2012-04-27</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -508,14 +517,14 @@
       ],
       "text/plain": [
        "  company        date\n",
-       "0    ADNT  2017-04-28\n",
-       "1    ADNT  2017-07-27\n",
-       "2    ADNT  2017-11-05\n",
-       "3    ADNT  2018-01-29\n",
-       "4    ADNT  2018-05-03"
+       "0     ALV  2009-07-21\n",
+       "1     ALV  2011-07-21\n",
+       "2     ALV  2011-10-25\n",
+       "3     ALV  2012-02-01\n",
+       "4     ALV  2012-04-27"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -543,7 +552,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -567,7 +576,6 @@
     "plt.bar(group_yq['period'].tolist(), group_yq['company'].tolist())\n",
     "plt.title(\"Companies per period\")\n",
     "plt.ylabel('Counts')\n",
-    "# plt.xticks(rotation=45, ha=\"right\")\n",
     "plt.xticks([i for i in range(len(group_yq[\"period\"])) if i % n == 0], \n",
     "           [label for i, label in enumerate(group_yq[\"period\"]) if i % n == 0],\n",
     "           rotation=45, ha='right', fontsize=8)\n",
@@ -584,7 +592,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -627,7 +635,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -650,6 +658,48 @@
     "plt.xticks(rotation=45, ha=\"right\")\n",
     "plt.tight_layout()\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   Unnamed: 0 company       sector  year  quarter                 date  \\\n",
+      "0           0    ADNT  automobiles  2017        2  2017-04-28 17:00:00   \n",
+      "1           1    ADNT  automobiles  2017        3  2017-07-27 17:00:00   \n",
+      "2           2    ADNT  automobiles  2017        4  2017-11-05 17:00:00   \n",
+      "3           3    ADNT  automobiles  2018        1  2018-01-29 17:00:00   \n",
+      "4           4    ADNT  automobiles  2018        2  2018-05-03 17:00:00   \n",
+      "5           5    ADNT  automobiles  2018        3  2018-07-26 17:00:00   \n",
+      "6           6    ADNT  automobiles  2018        4  2018-11-09 17:00:00   \n",
+      "7           7    ADNT  automobiles  2019        1  2019-02-07 17:00:00   \n",
+      "8           8    ADNT  automobiles  2019        2  2019-05-07 17:00:00   \n",
+      "9           9    ADNT  automobiles  2019        3  2019-08-06 17:00:00   \n",
+      "\n",
+      "                                          transcript  \n",
+      "0  Operator: Welcome, and thank you all for stand...  \n",
+      "1  Operator: Welcome, and thank for standing by. ...  \n",
+      "2  Operator: Welcome, and thank you for standing ...  \n",
+      "3  Operator: Welcome, and thank you for joining t...  \n",
+      "4  Operator: Welcome, and thank you all for stand...  \n",
+      "5  Operator: Good morning and thank you all for s...  \n",
+      "6  Operator: Thank you all for standing by. And w...  \n",
+      "7  Operator: Welcome to the Adient First Quarter ...  \n",
+      "8  Operator: Welcome and thank you for standing b...  \n",
+      "9  Operator: Good morning and thank you all for s...  \n"
+     ]
+    }
+   ],
+   "source": [
+    "chunksize = 10\n",
+    "for chunk in pd.read_csv('calls.csv', chunksize=chunksize):\n",
+    "    print(chunk)\n",
+    "    break"
    ]
   }
  ],
